Agregar rutas dinamicas

--- a/frontend/src/styles/_boostrap.scss
+++ b/frontend/src/styles/_boostrap.scss
@@ -7,3 +7,8 @@
     margin-right: auto !important;
     display: flex !important;
   }
+
+
+  .nav-tabs > .nav-item > a{
+    color: $color-primary !important;
+  }
