--- a/frontend/src/styles/base/_base.scss
+++ b/frontend/src/styles/base/_base.scss
@@ -1,4 +1,8 @@
 *{
     font-family: Avenir, Helvetica, Arial, sans-serif;
    // color: #2c3e50;
-  }
+}
+
+a:hover{
+    text-decoration: none !important;
+}
