Agregar columnas de cualquier categoria

--- a/frontend/src/styles/base/_utilities.scss
+++ b/frontend/src/styles/base/_utilities.scss
@@ -4,6 +4,11 @@
     fill: $color-primary;
     cursor: pointer;
   }
+.icon-small{
+  width: 10px !important;
+  height: 10px !important;
+}
+
   .icon-light{
     fill: #fff;
     cursor: pointer;
