--- a/frontend/src/styles/_boostrap.scss
+++ b/frontend/src/styles/_boostrap.scss
@@ -43,3 +43,16 @@
     }
 
   }
+
+  .modal-header{
+      background-color: $color-primary;
+      color: #fff;
+      .close{
+        color: #fff;
+        opacity: 1;
+        &:hover{
+          color: #fff;
+          opacity: .7;
+        }
+      }
+  }
