Order by diferentes filas + asc/desc en tablas

--- a/frontend/src/styles/components/_buttons.scss
+++ b/frontend/src/styles/components/_buttons.scss
@@ -9,3 +9,31 @@
     padding-top: 15px;
   }
   
+.badge{
+  padding: 6px 10px !important;
+  font-size: 12px !important;
+}
+
+.badge-1{
+  background-color: #ffc5c5 !important;
+  border: 1.5px solid #d13434 !important;
+  color: #d13434 !important;
+}
+
+.badge-2{
+  color: #06f !important;
+  background-color: #bed4ff !important;
+  border: 1.5px solid #06f !important;
+}
+
+.badge-3{
+  color: #2db429 !important;
+  background-color: #ccecd2 !important;
+  border: 1.5px solid #2db429 !important;
+}
+
+.badge-4{
+  color: #ecc71e !important;
+  background-color: #fcffce !important;
+  border: 1.5px solid #ecc71e !important;
+}
