--- a/frontend/src/styles/components/_inputs.scss
+++ b/frontend/src/styles/components/_inputs.scss
@@ -85,6 +85,8 @@
   }
   .dropdown-menu{
     width: 100% !important;
+    max-height: 300px !important;
+    overflow: scroll;
     li{
       width: 100%;
       margin: 0 !important;
