--- a/frontend/src/styles/_boostrap.scss
+++ b/frontend/src/styles/_boostrap.scss
@@ -2,7 +2,7 @@
     margin: 0 !important;
     padding: 0 !important;
   }
-  .col-10, .row{
+  .col-10{
     margin: 0 !important;
     flex-wrap: nowrap !important;
     justify-content: center !important;
@@ -84,3 +84,6 @@
         }
       }
   }
+
+
+  
