--- a/frontend/src/styles/base/_base.scss
+++ b/frontend/src/styles/base/_base.scss
@@ -1,6 +1,9 @@
 *{
     font-family: Avenir, Helvetica, Arial, sans-serif;
-   // color: #2c3e50;
+    background-color: $color-terciary;
+   &:focus{
+       outline: none !important;
+   }
 }
 
 a:hover{
