--- a/frontend/src/styles/base/_base.scss
+++ b/frontend/src/styles/base/_base.scss
@@ -1,9 +1,13 @@
 *{
     font-family: Avenir, Helvetica, Arial, sans-serif;
-    background-color: $color-terciary;
+    
    &:focus{
        outline: none !important;
    }
+}
+
+.app{
+    background-color: $color-terciary;
 }
 
 a:hover{
