--- a/frontend/src/styles/layout/_grid.scss
+++ b/frontend/src/styles/layout/_grid.scss
@@ -1,6 +1,7 @@
 .content{
   background-color: $color-terciary;
   padding: 30px 5% !important;
+  //min-height: calc(100vh - 40px);
 }
 
 .hide-on-tab-port{
